--- a/Assignment 02 Convolution Networks/Assignment_2_e_30.ipynb
+++ b/Assignment 02 Convolution Networks/Assignment_2_e_30.ipynb
@@ -2439,7 +2439,7 @@
         "id": "oS3QtOFFKTQx"
       },
       "source": [
-        "Summary: Model 2 built with 1000 training samples resulted in 71% accuracy, whereas the same model with an increase in training samples to 1500 spiked the accuracy to 81% i.e. 10% increase in the accuracy."
+        "Summary: Model 2 built with 1000 training samples resulted in 72% accuracy, whereas the same model with an increase in training samples to 1500 spiked the accuracy to 76.4%"
       ]
     },
     {
@@ -2802,7 +2802,7 @@
         "id": "uPMfsDuTMVP3"
       },
       "source": [
-        "Comparing the performance of the models, it was observed that utilizing strides with padding did not significantly benefit the model. Model 5, which incorporated a Max Pooling Layer, exhibited a 0.11 higher accuracy compared to the Strides model. Furthermore, by optimizing the network and increasing the training dataset from 1000 to 1500 samples, an enhanced accuracy of 76.4% was achieved.\n",
+        "Comparing the performance of the models, it was observed that utilizing strides with padding did not significantly benefit the model. Model 5, which incorporated a Max Pooling Layer, exhibited higher accuracy compared to the Strides model. Furthermore, by optimizing the network and increasing the training dataset from 1000 to 1500 samples, an enhanced accuracy of 76.4% was achieved.\n",
         "\n",
         "To address the second query, we plotted the performance of Model 5 and Model 6, allowing for a visual comparison. The graphs clearly illustrate that Model 5 achieved the highest accuracy among all the models, reaching 76.4%, with the lowest loss of 47.8%. The augmentation of the training samples to 1500 and the introduction of diverse augmented images notably contributed to the improved performance of the model."
       ]
@@ -6060,7 +6060,7 @@
         "id": "9CF4JkBUc6XD"
       },
       "source": [
-        "Next, we built 5 models using the pre-trained VGG16 network. The first 3 models were trained with 1000 samples using RMSprop as the optimizer, while the remaining 2 models were trained with 5000 samples using Adam as the optimizer.\n",
+        "Next, we built 5 models using the pre-trained VGG16 network. The first 3 models were trained with 1000 samples using RMSprop as the optimizer, while the remaining 2 models were trained with 3000 samples using Adam as the optimizer.\n",
         "\n",
         "VGG Models:\n",
         "\n",
@@ -6140,38 +6140,6 @@
       },
       "source": [
         "In the realm of pre-trained models, it was Model_5 (VGG_Model_3) and Model_4 (FineTuned_VGG_Model_3) that stood out as the top performers, boasting an impressive 98% accuracy and a mere 15% loss. These models were constructed with 3000 training samples respectively, and were optimized using the Adam optimizer with a learning rate of 0.000001."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-hzuMHn4dFND"
-      },
-      "source": [
-        "Conclusion:\n",
-        "\n",
-        "The analysis highlights that model accuracy is intricately linked to both the training data volume and the underlying architecture, depending on whether the model is trained from scratch or based on a pretrained network.\n",
-        "\n",
-        "\n",
-        "Scratch Models:\n",
-        "\n",
-        "The impact of training sample size and architecture on test accuracy is profound. Integrating modern architectural enhancements like residual connections, batch normalization, and depthwise separable convolutions into a basic scratch model, alongside data augmentation and dropout techniques, notably improved test accuracy. Increasing the training data from 1,000 to 3,000 samples resulted in substantial accuracy gains. Further expansion to 6,000 samples led to test accuracy levels comparable to pretrained models, addressing issues of overfitting by exposing the model to a broader data distribution.\n",
-        "\n",
-        "\n",
-        "Pretrained Networks:\n",
-        "\n",
-        "In contrast, pretrained networks demonstrate high test accuracy irrespective of the training sample size. The accuracy isn't significantly affected because the model isn't trained directly on the specific data being tested. Techniques like data augmentation and fine-tuning, despite their potential benefits, do not notably enhance accuracy in pretrained models like VGG16, which already exhibit high-performance due to their extensive original training dataset and architecture."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "pxRqJDGldIsC"
-      },
-      "source": [
-        " Recommendations: The accuracy of the simple scratch model experienced a significant boost, from 0.696 to 0.88.4, with an increase in the training data from 1,000 to 3,000 samples. With 3,000 training samples, incorporating three modern architectures, along with data augmentation and dropout techniques, resulted in a test accuracy close to 83.2%.Furthermore, when the model was trained with 5,000 samples, the test accuracy was 88%. it is recommended to prioritize Model 10 from the scratch models due to its superior accuracy.\n",
-        "\n",
-        "for pre trained fine tuned model model, we got 100% accuracy and hence I also belive that it is not always best to use pretrained models in all situations. The case for distinguishing between cat and dog pictures used in this task is context-independent – meaning that the background or context of the picture does not affect the dog versus cat distinction. Therefore, in the case of a pretrained model that distinguishes images, it can be used in any image distinction task as long as the sample images are in the same category as the target used to train the model."
       ]
     }
   ],
